--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             min-height: 98vh;
             background-color: #121212;
-            --text-color: #b695d3;
+            --text-color: #ff8a33;
             --font-fam: monospace;
         }
         #image-background {
