Change wallpaper for a better one

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </style>
 </head>
 <body>
-   <img id="image-background" src="./background.jpg" alt="background.jpg">
+   <img id="image-background" src="./background.png" alt="background.jpg">
    <div class="container">
         <p id="clock"></p>
         <div class="infos">
