Feat: change walp and text color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             min-height: 98vh;
             background-color: #121212;
-            --text-color: #ff8a33;
+            --text-color: #AD3DA1;
             --font-fam: monospace;
         }
         #image-background {
@@ -68,7 +68,7 @@
     </style>
 </head>
 <body>
-   <img id="image-background" src="./background.png" alt="background.jpg">
+   <img id="image-background" src="./background.jpg" alt="background.jpg">
    <div class="container">
         <p id="clock"></p>
         <div class="infos">
